--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+.App{
+  width: 100%;
+  height: 100vh;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header{
+  height: 10vh;
+  width: 100%;
+  background-color: #253341;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #1DA1F2;
+  font-size: 1.8rem;
+  letter-spacing: 8px;
+  font-weight: 800;
 }
+.home{
+  width: 90%;
+  padding: 4rem;
+  margin-right: 5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.product_main_container{
+  padding: 40px;
+    -webkit-box-shadow: 1px 1px 5px 0 #455c71;
+    -moz-box-shadow: 1px 1px 5px 0 #455c71;
+    box-shadow: 1px 1px 5px 0 #455c71;
+    min-height: 450px;
+    height: 100%;
+    max-height: 550px;
+    
+    width: 40%;
+}
+.product_content{
+  padding: 0.2rem;
+}
+.product_content>h2{
+  color: #ffffff;
+}
+.complete_product_flex{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
 }
-
-.App-link {
-  color: #61dafb;
+.product{
+  width: 100%;
+  margin-bottom: 1.5rem;
 }
+.graph_main_container{
+  padding: 40px;
+  -webkit-box-shadow: 1px 1px 5px 0 #455c71;
+  -moz-box-shadow: 1px 1px 5px 0 #455c71;
+  box-shadow: 1px 1px 5px 0 #455c71;
+  min-height: 450px;
+  height: 100%;
+  max-height: 550px;
+ 
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  width: 40%;
 }
